hosts/midnight-runner/kubernetes/infra/base/networking/gateway/gateway-dev.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: dev
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dev
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
  - name: https
    protocol: HTTPS
    port: 443
    allowedRoutes:
      namespaces:
        from: All
    hostname: "jfp.one"
    tls:
      mode: Terminate
      certificateRefs:
      - name: jfp-one-tls-dev
