hosts/midnight-runner/kubernetes/infra/base/networking/gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: jfp-one
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    hostname: jfp.one
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    hostname: jfp.one
    protocol: HTTPS
    port: 443
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: jfp-one-tls
  - name: authentik-http
    hostname: sso.jfp.one
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
  - name: authentik-https
    hostname: sso.jfp.one
    protocol: HTTPS
    port: 443
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: authentik-jfp-one-tls
  - name: jitsi-http
    hostname: talk.jfp.one
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
  - name: jitsi-https
    hostname: talk.jfp.one
    protocol: HTTPS
    port: 443
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: jitsi-jfp-one-tls
