hosts/midnight-runner/kubernetes/infra/base/networking/gateway/http-to-https-redirect.yaml
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: redirect-http-to-https
spec:
  parentRefs:
  - name: main
    namespace: networking
    sectionName: http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
